--- a/hw8/package.json
+++ b/hw8/package.json
@@ -18,9 +18,11 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
